# PI-300-Projects-Project01-Human-job-Into-Skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: fcr_firewall.yaml  incident_p2.yaml  runbook_high_cpu.yaml
netops_skills/: cli.py
netops_skills/common/: render.py  schema.py  utils.py
netops_skills/config/: defaults.yaml  profiles.yaml
netops_skills/skills/: fcr_autofill.py  incident_update.py  runbook_generator.py
notes/: context.md
playbooks/: api.yaml  circuit.yaml  f5.yaml  firewall.yaml  fmc.yaml
templates/: fcr_sections.md  incident_update_client.md  incident_update_manager.md  runbook.md
tests/: test_fcr_autofill.py  test_incident_update.py  test_runbook_generator.py
